--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style="position: absolute; inset: 50% 0 0 50%">Loading ...</div>
+    </div>
   </body>
 </html>
